added musical tuning system tables submitted by Hanno Behrens
Tue Dec 12 01:18:22 2006 Tim Janik <timj@gtk.org>

	* bsecore.idl, bsemathsignal.c: added musical tuning system tables
	submitted by Hanno Behrens <mailto:shaftoe@nurfuerspam.de>:
	12-TET, 7-TET, 5-TET, DIATONIC_SCALE, INDIAN_SCALE, PYTHAGOREAN_TUNING,
	PENTATONIC_5_LIMIT, PENTATONIC-BLUES, PENTATONIC-GOGO,
	QUARTER_COMMA_MEANTONE, SILBERMANN_SORGE, WERCKMEISTER_3,
	WERCKMEISTER_4, WERCKMEISTER_5, WERCKMEISTER_6, KIRNBERGER_3
	and YOUNG.

Mon Dec 11 00:51:36 2006  Tim Janik  <timj@gtk.org>

	* bsesong.[hc]: added musical_tuning property.

	* bseutils.h, bseutils.c:
	* bsenote.h, bsenote.c, bsenote.cc: converted bsenote to C++. added musical
	tuning argument to all note/freq API functions and adapted internal logic
	to cope with different tunings. removed unused BSE_FREQ*() macros.

	* bsecore.idl: introduce Bse::MusicalTuningType. added musical_tuning
	field to NoteDescription.

	* bseserver.proc:
	* bseprocedure.proc: added musical tuning arguments to various note
	related procedures, moved note procedures from bseserver.proc to
	bseprocedure.proc and got rid of their BseServer argument.

	* bsemathsignal.h, bsemathsignal.c: made semitone and transpose tables
	musical tuning sensitive.

	* bsepart.[hc]: allow per-part semitone tables, and changed macros so that
	part notes are converted to frequencies according to the musical tuning
	specific to a part.

	* bseitem.[hc]: provide bse_item_current_musical_tuning() and document
	its caveats.

	* bsesource.[hc]: added bse_source_prepared_musical_tuning() which
	provides musical tuning setting for a source if and only if the
	source is prepared. the tuning stays constant while the source is prepared.

	* bsesequencer.cc: perform part specific note->freq conversion.

	* bsemidifile.[hc]: added musical_tuning to use the new note API,
	defaulting to equal temperament.

	* bsemididecoder.c: hard code musical tuning to equal temperament,
	since we have to provide 

--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -15,6 +15,10 @@ EXTRA_DIST += arrows.gp filter-defs.gp
 noinst_PROGRAMS = $(ALLTESTS)
 progs_ldadd     = $(top_builddir)/bse/libbse.la
 
+TESTS            += misctests
+misctests_SOURCES = misctests.cc
+misctests_LDADD   = $(progs_ldadd)
+
 TESTS             += filtertest
 SLOWTESTS         += filtertest
 filtertest_SOURCES = filtertest.cc
