--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -106,9 +106,9 @@ bse/bsewaveosc.c
 data/beast.desktop.in
 data/beast.xml.in
 data/bse.keys.in
-drivers/bse-alsa/bsemididevice-alsa.c
-drivers/bse-alsa/bsepcmdevice-alsa.c
-drivers/bse-portaudio/bsepcmdevice-portaudio.cc
+#drivers/bse-alsa/bsemididevice-alsa.c
+#drivers/bse-alsa/bsepcmdevice-alsa.c
+#drivers/bse-portaudio/bsepcmdevice-portaudio.cc
 plugins/artscompressor.idl
 plugins/bseadder.c
 plugins/bseamplifier.idl
