reintroduced tee(1) to preserve output during report generation, but use
Thu Dec 14 21:38:31 2006 Tim Janik <timj@gtk.org>

        * Makefile.decl (report): reintroduced tee(1) to preserve output
        during report generation, but use $PIPESTATUS to ensure successful
        execution of the subshell commands.

svn path=/trunk/; revision=4170

--- a/Makefile.decl
+++ b/Makefile.decl
@@ -97,4 +97,4 @@ report: all
 	  && $(MAKE) $(AM_MAKEFLAGS) check slowcheck perf	\
 	  && echo -n "#TREPDONE: "  && date --iso-8601=seconds	\
 	) 2>&1 | tee "$$REPORTFILE"				\
-	&& test "${PIPESTATUS[*]}" = "0 0"
+	&& test "$${PIPESTATUS[*]}" = "0 0"
