--- a/plugins/icons/Makefile.icons
+++ b/plugins/icons/Makefile.icons
@@ -26,8 +26,8 @@ icon_list += atan.png
 icon_list += balance.png
 icon_list += canyon.png
 icon_list += chorus.png
-icon_list += compressor2.png
 icon_list += compressor.png
+icon_list += compressor2.png
 icon_list += davbassfilter.png
 icon_list += drum.png
 icon_list += eguitar.png
@@ -36,14 +36,15 @@ icon_list += moog.png
 icon_list += noise.png
 icon_list += organ.png
 icon_list += prod.png
+icon_list += quantizer.png
 icon_list += reverb.png
 icon_list += sample+hold.png
 icon_list += saturate.png
 icon_list += sequencer.png
 icon_list += strings.png
 icon_list += sub.png
-icon_list += summation.png
 icon_list += sum.png
+icon_list += summation.png
 icon_list += adsr.xcf
 icon_list += ampctrl.xcf
 icon_list += ampmix.xcf
@@ -51,8 +52,8 @@ icon_list += atan.xcf
 icon_list += balance.xcf
 icon_list += canyon.xcf
 icon_list += chorus.xcf
-icon_list += compressor2.xcf
 icon_list += compressor.xcf
+icon_list += compressor2.xcf
 icon_list += cyria-filter.xcf
 icon_list += drum.xcf
 icon_list += eguitar.xcf
@@ -63,12 +64,13 @@ icon_list += organ.xcf
 icon_list += osc.xcf
 icon_list += pipe.xcf
 icon_list += prod.xcf
+icon_list += quantizer.xcf
 icon_list += sample+hold.xcf
 icon_list += sequencer.xcf
 icon_list += sine.xcf
 icon_list += speaker.xcf
 icon_list += strings.xcf
 icon_list += sub.xcf
-icon_list += summation.xcf
 icon_list += sum.xcf
+icon_list += summation.xcf
 ## Generated data ends here
