provide virtual destructor for class with virtual methods, demanded by
Sun Dec 17 00:11:24 2006 Tim Janik <timj@gtk.org>

        * birnetutils.[hc]*: provide virtual destructor for class with virtual
        methods, demanded by g++.

        * acbirnet.m4: added autoconf utility file (moved here from beast).

svn path=/trunk/; revision=4183

--- a/birnet/Makefile.am
+++ b/birnet/Makefile.am
@@ -40,7 +40,7 @@ birnet_generated_headers = $(strip 	\
 	birnetconfig.h			\
 	birnetsignalvariants.hh         \
 )
-EXTRA_DIST += configure.inc mksignals.sh
+EXTRA_DIST += configure.inc acbirnet.m4 mksignals.sh
 
 # Birnet library
 # we want a partial shared library here. libtool creates that if the library
