--- a/configure.in
+++ b/configure.in
@@ -2,7 +2,7 @@ dnl # Birnet
 dnl # GNU Lesser General Public License version 2 or any later version.
 
 # include BEAST specific macros
-builtin(include, acbeast.m4)dnl
+builtin(include, birnet/acbirnet.m4)dnl
 
 #
 # Configure script for BEAST/BSE
@@ -31,7 +31,7 @@ dnl# if any functions have been added, set BSE_INTERFACE_AGE to 0.
 dnl# if backwards compatibility has been broken,
 dnl# set BSE_BINARY_AGE _and_ BSE_INTERFACE_AGE to 0.
 dnl# BST_RELEASE_CANDIDATE may contain rc[0-9]+ or nothing
-BST_RELEASE_CANDIDATE=rc1
+BST_RELEASE_CANDIDATE=rc2
 
 # version number setup
 BSE_VERSION=$BSE_MAJOR_VERSION.$BSE_MINOR_VERSION.$BSE_MICRO_VERSION
