added sum-diff-test: test rule to test BseSummation audio-diff output
Sat Dec 23 20:56:33 2006 Tim Janik <timj@gtk.org>

        * tests/audio/sum-diff-test.ref:
        * tests/audio/sum-diff-test.bse:
        * tests/audio/Makefile.am: added sum-diff-test: test rule to test
        BseSummation audio-diff output channel.

        * tests/audio/bse2wav.scm: added option parsing, support --seconds <>
        option to contrain the time intervall used for recording.

        * tests/audio/Makefile.am: lowered threshold for organsong-test and
        velocity-test which seem to occasionally fail due to timing variances.

        * Makefile.am: depend on automake 1.9.

svn path=/trunk/; revision=4205

--- a/tests/audio/Makefile.am
+++ b/tests/audio/Makefile.am
@@ -43,6 +43,15 @@ bseadder-test:
 	$(BSEFCOMPARE) $(srcdir)/bseadder.ref $(@F).tmp --threshold 99.99
 	rm -f $(@F).tmp $(@F).wav
 
+# Test the audio-diff characteristics of BseSummation     
+FEATURE_TESTS += sum-diff-test
+EXTRA_DIST += sum-diff-test.bse sum-diff-test.ref
+sum-diff-test:
+	$(BSE2WAV) $(srcdir)/sum-diff-test.bse $(@F).wav --seconds 25
+	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy  > $(@F).tmp
+	$(BSEFCOMPARE) $(srcdir)/sum-diff-test.ref $(@F).tmp --threshold 99.99
+	rm -f $(@F).tmp $(@F).wav
+
 FEATURE_TESTS += balance-test
 EXTRA_DIST += balance.bse balance.ref
 balance-test:
@@ -72,20 +81,20 @@ syndrum-test:
 
 FEATURE_TESTS += velocity-test
 EXTRA_DIST += velocity.bse velocity.ref
-velocity-test:
+velocity-test: # threshold should be 99.99
 	$(BSE2WAV) $(srcdir)/velocity.bse $(@F).wav
 	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy  > $(@F).tmp
 	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 1 --avg-spectrum --spectrum --avg-energy >> $(@F).tmp
-	$(BSEFCOMPARE) $(srcdir)/velocity.ref $(@F).tmp --threshold 99.99
+	$(BSEFCOMPARE) $(srcdir)/velocity.ref $(@F).tmp --threshold 99.5
 	rm -f $(@F).tmp $(@F).wav
 
 # DavOrgan module is a mono module, so we test only channel 0 (left)
 FEATURE_TESTS += organsong-test
 EXTRA_DIST += organsong.bse organsong.ref
-organsong-test:
+organsong-test: # threshold should be 99.99
 	$(BSE2WAV) $(srcdir)/organsong.bse $(@F).wav
 	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy  > $(@F).tmp
-	$(BSEFCOMPARE) $(srcdir)/organsong.ref $(@F).tmp --threshold 99.99
+	$(BSEFCOMPARE) $(srcdir)/organsong.ref $(@F).tmp --threshold 99.9
 	rm -f $(@F).tmp $(@F).wav
 
 # ADSR Test checks the mono channel envelope rendering
