--- a/drivers/bse-alsa/configure.in
+++ b/drivers/bse-alsa/configure.in
@@ -30,7 +30,7 @@ dnl# if any functions have been added, set PACKAGE_INTERFACE_AGE to 0.
 dnl# if backwards compatibility has been broken,
 dnl# set PACKAGE_BINARY_AGE _and_ PACKAGE_INTERFACE_AGE to 0.
 dnl# PACKAGE_RELEASE_CANDIDATE may contain rc[0-9]+ or nothing
-PACKAGE_RELEASE_CANDIDATE=rc1
+PACKAGE_RELEASE_CANDIDATE= #rc1
 
 # version number setup
 PACKAGE_VERSION=$PACKAGE_MAJOR_VERSION.$PACKAGE_MINOR_VERSION.$PACKAGE_MICRO_VERSION
