removed mad.pc from dependencies because libmad doesn't come with a mad.pc
Tue Dec 26 23:24:01 2006 Tim Janik <timj@gtk.org>

        * configure.in:
        * data/bse.pc.in: removed mad.pc from dependencies because libmad
        doesn't come with a mad.pc in every distribution.

Sat Dec 23 20:56:33 2006  Tim Janik  <timj@gtk.org>

        * tests/audio/sum-diff-test.ref:
        * tests/audio/sum-diff-test.bse:
        * tests/audio/Makefile.am: added sum-diff-test: test rule to test
        BseSummation audio-diff output channel.

        * tests/audio/bse2wav.scm: added option parsing, support --seconds <>
        option to constrain the time intervall used for recording.

        * Makefile.am: depend on automake 1.9.

svn path=/trunk/; revision=4214

--- a/configure.in
+++ b/configure.in
@@ -272,9 +272,10 @@ AC_DEFUN([AC_BSE_REQUIREMENTS],
     AC_SUBST(BSE_LIBS)
     dnl # --- figure stuff for bse.pc ---
     BSE_PC_REQUIRE=
-    if test $BSE_HAVE_LIBMAD = 1 ; then
-	BSE_PC_REQUIRE=mad
-    fi
+    dnl # except for debian, libmad doesn't ship a mad.pc file
+    dnl #if test $BSE_HAVE_LIBMAD = 1 ; then
+    dnl #	BSE_PC_REQUIRE=mad
+    dnl #fi
     BSE_PC_CFLAGS=
     BSE_PC_LIBS="$OV_LIBS"
     AC_SUBST(BSE_PC_REQUIRE)
