--- a/tests/audio/Makefile.am
+++ b/tests/audio/Makefile.am
@@ -81,20 +81,20 @@ syndrum-test:
 
 FEATURE_TESTS += velocity-test
 EXTRA_DIST += velocity.bse velocity.ref
-velocity-test: # threshold should be 99.99
+velocity-test:
 	$(BSE2WAV) $(srcdir)/velocity.bse $(@F).wav
 	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy  > $(@F).tmp
 	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 1 --avg-spectrum --spectrum --avg-energy >> $(@F).tmp
-	$(BSEFCOMPARE) $(srcdir)/velocity.ref $(@F).tmp --threshold 99.5
+	$(BSEFCOMPARE) $(srcdir)/velocity.ref $(@F).tmp --threshold 99.99
 	rm -f $(@F).tmp $(@F).wav
 
 # DavOrgan module is a mono module, so we test only channel 0 (left)
 FEATURE_TESTS += organsong-test
 EXTRA_DIST += organsong.bse organsong.ref
-organsong-test: # threshold should be 99.99
+organsong-test:
 	$(BSE2WAV) $(srcdir)/organsong.bse $(@F).wav
 	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy  > $(@F).tmp
-	$(BSEFCOMPARE) $(srcdir)/organsong.ref $(@F).tmp --threshold 99.9
+	$(BSEFCOMPARE) $(srcdir)/organsong.ref $(@F).tmp --threshold 99.99
 	rm -f $(@F).tmp $(@F).wav
 
 # ADSR Test checks the mono channel envelope rendering
