get rid of tmeporary file warnings.
Thu Jan 04 21:12:19 2007  Tim Janik  <timj@gtk.org>

        * tests/filecheck/Makefile.am: get rid of tmeporary file warnings.



svn path=/trunk/; revision=4218

--- a/tests/filecheck/Makefile.am
+++ b/tests/filecheck/Makefile.am
@@ -45,6 +45,7 @@ check: bse-version-check
 .PHONY: bse-loading-check
 SKIP_PATTERN = "tests/latency/midi-latency.bse|tests/audio/minisong.bse"
 bse-loading-check: distfiles.list
+	@rm -f warnings.tmp
 	for tfile in `grep '\.bse$$' distfiles.list` ; do		\
 	  file="$(top_srcdir)/$$tfile" ;				\
 	  if echo "$$tfile" | egrep -q $(SKIP_PATTERN) ; then		\
@@ -56,6 +57,7 @@ bse-loading-check: distfiles.list
 	    test ! -s "warnings.tmp" || exit 1 ;			\
 	  fi ;								\
 	done
+	@rm -f warnings.tmp
 	@MESSAGETEXT="All tested BSE files passed loading test"		\
 	&& echo $$MESSAGETEXT | sed 's/./=/g' 				\
 	&& echo $$MESSAGETEXT		 				\
